Fixed bug where adding certain characters to an emoticon could break the display.

--- a/popup/css/popupstyle.css
+++ b/popup/css/popupstyle.css
@@ -104,6 +104,7 @@ body {
 
 #addEmotiCategoryText {
     display: none;
+    left: -10px;
 }
 
 .message {
